writing into a NonNull field should throw a NPE, ValueRewriter should analyze all classes, the ParametricRewriter does not check that there is no value classes properly